--- a/index.html
+++ b/index.html
@@ -9,26 +9,29 @@
 	<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/cd385a218c.js" crossorigin="anonymous"></script>
 	<link href="./StyleSheet.css" rel="StyleSheet">
-	<script defer src = "./app.js"></script>
+	<script defer src="./app.js"></script>
 	<title>Form Validation</title>
 </head>
 <body>
 	<div class="container">
-		<form action="" onsubmit="validateForm(event)">
+		<form onsubmit="validateForm(event)">
 			<fieldset> 
 				<legend>Name</legend> 
 				<div>
 					<label for="name">Name</label>
 					<input type="text" id="name" placeholder="First & Last Name">
 				</div>
+				<span id="nameSpan"></span>
 				<div>
 					<label for="email">Email</label>
 					<input type="email" id="email" placeholder="Example123@gmail.com">
 				</div>
+				<span id="emailSpan"></span>
 				<div>
 					<label for="phone">Phone #</label>
 					<input type="tel" id="phone" placeholder="(###)-###-####">
 				</div>
+				<span id="phoneSpan"></span>
 			</fieldset>
 
 			<fieldset> 
@@ -37,10 +40,12 @@
 					<label for="address">Address</label>
 					<input type="text" id="address" placeholder="308 Negra Arura Lane">
 				</div>
+				<span id="addressSpan"></span>
 				<div>
 					<label for="postCode">Post Code</label>
-					<input type="number" id="postCode" placeholder="55555">
+					<input type="number" id="postCode" placeholder="87104">
 				</div>
+				<span id="postCodeSpan"></span>
 				<div>
 					<label for="state">State</label>
 					<select name="state" id="state">
@@ -97,6 +102,7 @@
 						<option value="WY">Wyoming</option>
 					</select>
 				</div>
+				<span id="stateSpan"></span>
 				
 			</fieldset>
 			<fieldset>
@@ -119,18 +125,27 @@
 						<i class="fa-brands fa-cc-discover fa-xl"></i>
 					</div>
 				</div>
+				<span id="cardTypeSpan"></span>
 				<div>
 					<label for="cardNumber">Card #</label>
-					<input type="number" id="cardNumber">
+					<input type="number" id="cardNumber" placeholder="0000111122223333">
 				</div>
+				<span id="cardNumberSpan"></span>
 				<div>
 					<label for="ccv">Security code</label>
-					<input type="number" id="ccv">
+					<input type="number" id="ccv" placeholder="123">
 				</div>
+				<span id="ccvSpan"></span>
+				<div>
+					<label for="expiration">Expiration</label>
+					<input type="number" id="expiration" placeholder="09/11">
+				</div>
+				<span id="expirationSpan"></span>
 				<div>
 					<label for="cardName">Name On Card</label>
-					<input type="text" id="cardName">
+					<input type="text" id="cardName" placeholder="Walter White">
 				</div>
+				<span id="cardNameSpan"></span>
 			</fieldset>
 
 			<input type="submit" name="submit" id="submit">
